--- a/server/package.json
+++ b/server/package.json
@@ -9,15 +9,18 @@
     "build": "tsc -p tsconfig.json"
   },
   "dependencies": {
-    "express": "^4.19.2",
+    "@supabase/supabase-js": "^2.45.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "@supabase/supabase-js": "^2.45.4",
-    "zod": "^3.23.8",
+    "express": "^4.19.2",
     "node-fetch": "^3.3.2",
-    "cookie-parser": "^1.4.6"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "tsx": "^4.16.2",
     "typescript": "^5.4.5"
   }
